--- a/config.json
+++ b/config.json
@@ -14,20 +14,18 @@
 	],
 	"mapName_comment": "STRING: The name of the map",
 	"mapName": "new_gen_test",
-	"mapDirectoryPath_comment": "STRING: Path to the projects directory of the game",
-	"mapDirectoryPath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Hypersomnia\\user\\projects\\new_gen_test",
+	"gameDirectoryPath_comment": "STRING: Path to the directory of the game",
+	"gameDirectoryPath": "E:\\Steam\\steamapps\\common\\Hypersomnia",
 	"mapGfxPath_comment": "STRING: (DEBUG ONLY) Path to the graphics directory of the map",
 	"mapGfxPath": "gfx",
 	"cropMap_comment": "BOOLEAN: (DEBUG ONLY) Crop the unnecessary tiles of the map during generation",
 	"cropMap": true,
-	"randomEnabled_comment": "BOOLEAN: (DEBUG ONLY) Use mean range values instead of random generation",
-	"randomEnabled": true,
 	"roomsCount_comment": "POINT: Total count of rooms generated horizontally and vertically",
-	"roomsCount": "6,4",
+	"roomsCount": "8,6",
 	"roomMinMaxSize_comment": "MINMAXSIZE: Min and max base randomized horizontal/vertical size in tiles of the generated rooms of the map's carcass",
-	"roomMinMaxSize": "5,5,8,8",
+	"roomMinMaxSize": "6,6,8,8",
 	"wallMinMaxSize_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical walls of the rooms in tiles",
-	"wallMinMaxSize": "1,1,3,3",
+	"wallMinMaxSize": "2,2,4,4",
 	"wallMaxOffset_comment": "POINT: How much horizontal/vertical walls can be offset towards the center of the room from their base position",
 	"wallMaxOffset": "2,2",
 	"doorMinMaxWidth_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical doors of the rooms",
@@ -65,5 +63,9 @@
 	"roomLightTintMin_comment": "COLOR: Min room light tint values",
 	"roomLightTintMin": "20,20,20,20",
 	"roomLightTintMax_comment": "COLOR: Max room light tint values",
-	"roomLightTintMax": "200,200,200,40"
+	"roomLightTintMax": "200,200,200,40",
+	"outputTextFilePath_comment": "STRING: Path to the text file into which basic output is printed",
+	"outputTextFilePath": "out.txt",
+	"gameVersion_comment": "STRING: Game version, change if necessary",
+	"gameVersion": "1.2.8546"
 }
