More config options

--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
 	"Point fields accept a x,y value",
 	"Size fields accept a width,height value",
 	"MinMaxSize fields accept a minWidth,minHeight,maxWidth,maxHeight value",
+	"MinMaxColor fields accept a minR,minG,minB,minA,maxR,maxG,maxB,maxA value",
 	"Color fields accept a red,green,blue,alpha value",
 	"Integer fields accept a number without a floating point",
 	"Float fields accept a number with a floating point",
@@ -15,7 +16,7 @@
 	"mapName_comment": "STRING: The name of the map",
 	"mapName": "new_gen_test",
 	"gameDirectoryPath_comment": "STRING: Path to the directory of the game",
-	"gameDirectoryPath": "E:\\Steam\\steamapps\\common\\Hypersomnia",
+	"gameDirectoryPath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Hypersomnia",
 	"mapGfxPath_comment": "STRING: (DEBUG ONLY) Path to the graphics directory of the map",
 	"mapGfxPath": "gfx",
 	"cropMap_comment": "BOOLEAN: (DEBUG ONLY) Crop the unnecessary tiles of the map during generation",
@@ -30,7 +31,8 @@
 	"wallMaxOffset": "2,2",
 	"doorMinMaxWidth_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical doors of the rooms",
 	"doorMinMaxWidth": "2,2,4,4",
-	"styleCount_comment": "INTEGER: Total count of possible room styles (not guaranteed that all are used)",
+	"styleCount_comment": ["INTEGER: Total count of possible room styles. Not guaranteed that all styles will be used.",
+		"Please note that each consecutive style has a +1 height for shadow generation."],
 	"styleCount": 2,
 	"styleSizeMinMaxSize_comment": "MINMAXSIZE: Min and max size of the randomized style of the room compared to the base size of the room",
 	"styleSizeMinMaxSize": "0,0,2,2",
@@ -44,38 +46,36 @@
 	"blackLineFloorTint": "255,255,255,20",
 	"blackLineWallTint_comment": "COLOR: Black line wall color",
 	"blackLineWallTint": "255,255,255,20",
-	"floorTintBase_comment": "INTEGER: Base floor texture tint",
-	"floorTintBase": 110,
-	"wallTintBase_comment": "INTEGER: Base wall texture tint",
-	"wallTintBase": 230,
-	"floorTintPerHeight_comment": "INTEGER: Floor texture tint change per style height",
-	"floorTintPerHeight": 15,
-	"wallTintPerHeight_comment": "INTEGER: Wall texture tint change per style height",
-	"wallTintPerHeight": 20,
-	"wallHeight_comment": "INTEGER: Wall height (for shadow generation purposes)",
+	"floorMinMaxTintBase_comment": "MINMAXCOLOR: Base randomized min max floor texture tint",
+	"floorMinMaxTintBase": "110,110,110,255,110,110,110,255",
+	"wallMinMaxTintBase_comment": "MINMAXCOLOR: Base randomized min max wall texture tint",
+	"wallMinMaxTintBase": "230,230,230,255,230,230,230,255",
+	"floorTintPerHeight_comment": "COLOR: Floor texture tint change per style height",
+	"floorTintPerHeight": "15,15,15,0",
+	"wallTintPerHeight_comment": "COLOR: Wall texture tint change per style height",
+	"wallTintPerHeight": "20,20,20,0",
+	"wallHeight_comment": "INTEGER: (DEBUG) Wall height (for shadow generation purposes)",
 	"wallHeight": 4,
 	"patternResourceCount_comment": "INTEGER: How many pattern resources are available",
 	"patternResourceCount": 11,
-	"patternColorFloor_comment": "COLOR: Floor pattern tint",
-	"patternColorFloor": "255,255,255,15_25",
-	"patternColorWall_comment": "COLOR: Wall pattern tint",
-	"patternColorWall": "255,255,255,15_25",
-	"roomLightTintMin_comment": "COLOR: Min room light tint values",
-	"roomLightTintMin": "20,20,20,20",
-	"roomLightTintMax_comment": "COLOR: Max room light tint values",
-	"roomLightTintMax": "200,200,200,40",
+	"patternMinMaxTintFloor_comment": "MINMAXCOLOR: Min max randomized floor pattern tint",
+	"patternMinMaxTintFloor": "255,255,255,15,255,255,255,25",
+	"patternMinMaxTintWall_comment": "MINMAXCOLOR: Min max randomized wall pattern tint",
+	"patternMinMaxTintWall": "255,255,255,15,255,255,255,25",
+	"roomLightMinMaxTint_comment": "COLOR: Min max randomized room light effect tint values",
+	"roomLightMinMaxTint": "20,20,20,20,200,200,200,40",
 	"outputTextFilePath_comment": "STRING: Path to the text file into which basic output is printed",
 	"outputTextFilePath": "out.txt",
 	"gameVersion_comment": "STRING: Game version, change if necessary",
 	"gameVersion": "1.2.8546",
 	"crateBlockingChance_comment": "INTEGER: Chance that a spawned crate will be blocking",
-	"crateBlockingChance": 50,
+	"crateBlockingChance": 30,
 	"cratesMinMaxSpaceLeftPerRoom_comment": "MINMAXSIZE: Each crate takes up 1x1 space until this much space is left in a room",
 	"cratesMinMaxSpaceLeftPerRoom": "1,1,3,3",
 	"crateBlockingMinMaxTint_comment": "MINMAXCOLOR: Randomized blocking crate tint",
 	"crateBlockingMinMaxTint": "210,210,210,210,230,230,230,220",
 	"crateNonBlockingMinMaxTint_comment": "MINMAXCOLOR: Randomized non blocking crate tint",
-	"crateNonBlockingMinMaxTint": "120,120,120,200,140,140,140,210",
+	"crateNonBlockingMinMaxTint": "130,130,130,210,150,150,150,220",
 	"crateMinMaxSize_comment": "MINMAXSIZE: Randomized crate size",
 	"crateMinMaxSize": "104,104,104,104",
 	"cratesBlockingPerStyle_comment": "INTEGER: Amount of blocking crate styles per room style",
