"Crate size" and "Room effect size" multipliers

--- a/config.json
+++ b/config.json
@@ -13,27 +13,23 @@
 	"Float fields accept a number with a floating point",
 	"Random values can be generated using a minValue_maxValue syntax, e.g. roomsCount: \"5_10,6_12\""
 	],
-	"mapName_comment": "STRING: The name of the map",
-	"mapName": "new_gen_test",
 	"gameDirectoryPath_comment": "STRING: Path to the directory of the game",
 	"gameDirectoryPath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Hypersomnia",
-	"mapGfxPath_comment": "STRING: (DEBUG ONLY) Path to the graphics directory of the map",
-	"mapGfxPath": "gfx",
-	"cropMap_comment": "BOOLEAN: (DEBUG ONLY) Crop the unnecessary tiles of the map during generation",
-	"cropMap": true,
+	"mapName_comment": "STRING: The name of the map",
+	"mapName": "new_gen_test",
 	"roomsCount_comment": "POINT: Total count of rooms generated horizontally and vertically",
 	"roomsCount": "8,6",
 	"roomMinMaxSize_comment": "MINMAXSIZE: Min and max base randomized horizontal/vertical size in tiles of the generated rooms of the map's carcass",
-	"roomMinMaxSize": "6,6,8,8",
+	"roomMinMaxSize": "5,5,7,7",
 	"wallMinMaxSize_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical walls of the rooms in tiles",
-	"wallMinMaxSize": "2,2,4,4",
+	"wallMinMaxSize": "1,1,4,4",
 	"wallMaxOffset_comment": "POINT: How much horizontal/vertical walls can be offset towards the center of the room from their base position",
 	"wallMaxOffset": "2,2",
 	"doorMinMaxWidth_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical doors of the rooms",
 	"doorMinMaxWidth": "2,2,4,4",
 	"styleCount_comment": ["INTEGER: Total count of possible room styles. Not guaranteed that all styles will be used.",
 		"Please note that each consecutive style has a +1 height for shadow generation."],
-	"styleCount": 2,
+	"styleCount": 4,
 	"styleSizeMinMaxSize_comment": "MINMAXSIZE: Min and max size of the randomized style of the room compared to the base size of the room",
 	"styleSizeMinMaxSize": "0,0,2,2",
 	"ambientLightColor_comment": "COLOR: Ambient light color",
@@ -49,11 +45,11 @@
 	"floorMinMaxTintBase_comment": "MINMAXCOLOR: Base randomized min max floor texture tint",
 	"floorMinMaxTintBase": "110,110,110,255,110,110,110,255",
 	"wallMinMaxTintBase_comment": "MINMAXCOLOR: Base randomized min max wall texture tint",
-	"wallMinMaxTintBase": "230,230,230,255,230,230,230,255",
+	"wallMinMaxTintBase": "200,200,200,255,200,200,200,255",
 	"floorTintPerHeight_comment": "COLOR: Floor texture tint change per style height",
 	"floorTintPerHeight": "15,15,15,0",
 	"wallTintPerHeight_comment": "COLOR: Wall texture tint change per style height",
-	"wallTintPerHeight": "20,20,20,0",
+	"wallTintPerHeight": "15,15,15,0",
 	"wallHeight_comment": "INTEGER: (DEBUG) Wall height (for shadow generation purposes)",
 	"wallHeight": 4,
 	"patternResourceCount_comment": "INTEGER: How many pattern resources are available",
@@ -64,10 +60,8 @@
 	"patternMinMaxTintWall": "255,255,255,15,255,255,255,25",
 	"roomLightMinMaxTint_comment": "COLOR: Min max randomized room light effect tint values",
 	"roomLightMinMaxTint": "20,20,20,20,200,200,200,40",
-	"outputTextFilePath_comment": "STRING: Path to the text file into which basic output is printed",
-	"outputTextFilePath": "out.txt",
-	"gameVersion_comment": "STRING: Game version, change if necessary",
-	"gameVersion": "1.2.8546",
+	"roomEffectMinMaxSizeMultiplier_comment": "MINMAXFLOAT: Randomized room lighting effect size multiplier",
+	"roomEffectMinMaxSizeMultiplier": "0.9,1.3",
 	"crateBlockingChance_comment": "INTEGER: Chance that a spawned crate will be blocking",
 	"crateBlockingChance": 30,
 	"cratesMinMaxSpaceLeftPerRoom_comment": "MINMAXSIZE: Each crate takes up 1x1 space until this much space is left in a room",
@@ -76,10 +70,16 @@
 	"crateBlockingMinMaxTint": "210,210,210,210,230,230,230,220",
 	"crateNonBlockingMinMaxTint_comment": "MINMAXCOLOR: Randomized non blocking crate tint",
 	"crateNonBlockingMinMaxTint": "130,130,130,210,150,150,150,220",
-	"crateMinMaxSize_comment": "MINMAXSIZE: Randomized crate size",
-	"crateMinMaxSize": "104,104,104,104",
+	"crateMinMaxSizeMultiplier_comment": "MINMAXFLOAT: Randomized crate size multiplier",
+	"crateMinMaxSizeMultiplier": "0.9,1.3",
 	"cratesBlockingPerStyle_comment": "INTEGER: Amount of blocking crate styles per room style",
 	"cratesBlockingPerStyle": 3,
 	"cratesNonBlockingPerStyle_comment": "INTEGER: Amount of non blocking crate styles per room style",
-	"cratesNonBlockingPerStyle": 3
+	"cratesNonBlockingPerStyle": 3,
+	"outputTextFilePath_comment": "STRING: Path to the text file into which basic output is printed",
+	"outputTextFilePath": "out.txt",
+	"gameVersion_comment": "STRING: Game version, change if necessary",
+	"gameVersion": "1.2.8546",
+	"cropMap_comment": "BOOLEAN: (DEBUG ONLY) Crop the unnecessary tiles of the map during generation",
+	"cropMap": true
 }
