--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <version>0.10.4</version>
         </dependency>
         <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr-jackson</artifactId>
+            <version>0.10.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jool-java-8</artifactId>
             <version>0.9.14</version>
