--- a/config.json
+++ b/config.json
@@ -10,26 +10,27 @@
 	"MinMaxColor fields accept a minR,minG,minB,minA,maxR,maxG,maxB,maxA value",
 	"Color fields accept a red,green,blue,alpha value",
 	"Integer fields accept a number without a floating point",
-	"Float fields accept a number with a floating point",
-	"Random values can be generated using a minValue_maxValue syntax, e.g. roomsCount: \"5_10,6_12\""
+	"Float fields accept a number with a floating point"
 	],
 	"gameDirectoryPath_comment": "STRING: Path to the directory of the game",
 	"gameDirectoryPath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Hypersomnia",
+	"randomEnabled": true,
+	"seed": 5154,
 	"mapName_comment": "STRING: The name of the map",
 	"mapName": "new_gen_test",
 	"roomsCount_comment": "POINT: Total count of rooms generated horizontally and vertically",
-	"roomsCount": "8,6",
+	"roomsCount": "8,8",
 	"roomMinMaxSize_comment": "MINMAXSIZE: Min and max base randomized horizontal/vertical size in tiles of the generated rooms of the map's carcass",
-	"roomMinMaxSize": "5,5,7,7",
+	"roomMinMaxSize": "6,5,8,6",
 	"wallMinMaxSize_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical walls of the rooms in tiles",
-	"wallMinMaxSize": "1,1,4,4",
+	"wallMinMaxSize": "1,1,2,2",
 	"wallMaxOffset_comment": "POINT: How much horizontal/vertical walls can be offset towards the center of the room from their base position",
 	"wallMaxOffset": "2,2",
 	"doorMinMaxWidth_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical doors of the rooms",
 	"doorMinMaxWidth": "2,2,4,4",
 	"styleCount_comment": ["INTEGER: Total count of possible room styles. Not guaranteed that all styles will be used.",
 		"Please note that each consecutive style has a +1 height for shadow generation."],
-	"styleCount": 4,
+	"styleCount": 3,
 	"styleSizeMinMaxSize_comment": "MINMAXSIZE: Min and max size of the randomized style of the room compared to the base size of the room",
 	"styleSizeMinMaxSize": "0,0,2,2",
 	"ambientLightColor_comment": "COLOR: Ambient light color",
@@ -51,7 +52,7 @@
 	"wallTintPerHeight_comment": "COLOR: Wall texture tint change per style height",
 	"wallTintPerHeight": "15,15,15,0",
 	"wallHeight_comment": "INTEGER: (DEBUG) Wall height (for shadow generation purposes)",
-	"wallHeight": 4,
+	"wallHeight": 3,
 	"patternResourceCount_comment": "INTEGER: How many pattern resources are available",
 	"patternResourceCount": 11,
 	"patternMinMaxTintFloor_comment": "MINMAXCOLOR: Min max randomized floor pattern tint",
@@ -81,5 +82,11 @@
 	"gameVersion_comment": "STRING: Game version, change if necessary",
 	"gameVersion": "1.2.8546",
 	"cropMap_comment": "BOOLEAN: (DEBUG ONLY) Crop the unnecessary tiles of the map during generation",
-	"cropMap": true
+	"cropMap": true,
+	"roomsDisabled_comment": "POINT ARRAY: These rooms will be removed",
+	"roomsDisabled": ["0,0","0,5","3,2","3,4","0,1","0,4","0,5","0,6","1,0","1,6"],
+	"roomsDoorDownDisabled_comment": "POINT ARRAY: These rooms will not have a room to the lower room",
+	"roomsDoorDownDisabled": ["6,4","7,5"],
+	"roomsDoorRightDisabled_comment": "POINT ARRAY: These rooms will not have a room to the right room",
+	"roomsDoorRightDisabled": ["7,3","7,5","7,7"]
 }
