--- a/config.json
+++ b/config.json
@@ -6,31 +6,36 @@
 	"Boolean fields accept true or false",
 	"Point fields accept a x,y value",
 	"Size fields accept a width,height value",
+	"MinMaxFloat fields accept a minFloat,maxFloat value (with a dot)",
 	"MinMaxSize fields accept a minWidth,minHeight,maxWidth,maxHeight value",
 	"MinMaxColor fields accept a minR,minG,minB,minA,maxR,maxG,maxB,maxA value",
 	"Color fields accept a red,green,blue,alpha value",
 	"Integer fields accept a number without a floating point",
-	"Float fields accept a number with a floating point"
+	"Float fields accept a number with a floating point (with a dot)"
 	],
 	"gameDirectoryPath_comment": "STRING: Path to the directory of the game",
 	"gameDirectoryPath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Hypersomnia",
+	"randomEnabled_comment": "BOOLEAN: (DEBUG ONLY) When random is disabled, mean values are used instead",
 	"randomEnabled": true,
-	"seed": 5154,
+	"randomSeed_comment": "INTEGER: Global random seed",
+	"randomSeed": 5154,
 	"mapName_comment": "STRING: The name of the map",
 	"mapName": "new_gen_test",
 	"roomsCount_comment": "POINT: Total count of rooms generated horizontally and vertically",
-	"roomsCount": "8,8",
+	"roomsCount": "7,7",
 	"roomMinMaxSize_comment": "MINMAXSIZE: Min and max base randomized horizontal/vertical size in tiles of the generated rooms of the map's carcass",
-	"roomMinMaxSize": "6,5,8,6",
+	"roomMinMaxSize": "6,7,8,9",
 	"wallMinMaxSize_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical walls of the rooms in tiles",
-	"wallMinMaxSize": "1,1,2,2",
+	"wallMinMaxSize": "1,2,3,4",
 	"wallMaxOffset_comment": "POINT: How much horizontal/vertical walls can be offset towards the center of the room from their base position",
-	"wallMaxOffset": "2,2",
+	"wallMaxOffset": "2,3",
 	"doorMinMaxWidth_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical doors of the rooms",
-	"doorMinMaxWidth": "2,2,4,4",
+	"doorMinMaxWidth": "2,3,4,5",
 	"styleCount_comment": ["INTEGER: Total count of possible room styles. Not guaranteed that all styles will be used.",
-		"Please note that each consecutive style has a +1 height for shadow generation."],
+		"Please note that by default each consecutive style has a +1 height for shadow generation."],
 	"styleCount": 3,
+	"styleHeightOverride_comment": ["INTEGER ARRAY: Optional, overrides style height for style[i]"],
+	"styleHeightOverride": [],
 	"styleSizeMinMaxSize_comment": "MINMAXSIZE: Min and max size of the randomized style of the room compared to the base size of the room",
 	"styleSizeMinMaxSize": "0,0,2,2",
 	"ambientLightColor_comment": "COLOR: Ambient light color",
@@ -61,6 +66,10 @@
 	"patternMinMaxTintWall": "255,255,255,15,255,255,255,25",
 	"roomLightMinMaxTint_comment": "COLOR: Min max randomized room light effect tint values",
 	"roomLightMinMaxTint": "20,20,20,20,200,200,200,40",
+	"roomLightMinMaxVibration_comment": "MINMAXFLOAT: Min max randomized room point light positional vibration",
+	"roomLightMinMaxVibration": "1.0,1.1",
+	"roomLightMinMaxRadius_comment": "MINMAXFLOAT: Min max randomized room point light radius",
+	"roomLightMinMaxRadius": "250,500",
 	"roomEffectMinMaxSizeMultiplier_comment": "MINMAXFLOAT: Randomized room lighting effect size multiplier",
 	"roomEffectMinMaxSizeMultiplier": "0.9,1.3",
 	"crateBlockingChance_comment": "INTEGER: Chance that a spawned crate will be blocking",
@@ -83,10 +92,10 @@
 	"gameVersion": "1.2.8546",
 	"cropMap_comment": "BOOLEAN: (DEBUG ONLY) Crop the unnecessary tiles of the map during generation",
 	"cropMap": true,
-	"roomsDisabled_comment": "POINT ARRAY: These rooms will be removed",
+	"roomsDisabled_comment": "POINT ARRAY: Optional, these rooms will be removed",
 	"roomsDisabled": ["0,0","0,5","3,2","3,4","0,1","0,4","0,5","0,6","1,0","1,6"],
-	"roomsDoorDownDisabled_comment": "POINT ARRAY: These rooms will not have a room to the lower room",
+	"roomsDoorDownDisabled_comment": "POINT ARRAY: Optional, these rooms will not have a room to the lower room",
 	"roomsDoorDownDisabled": ["6,4","7,5"],
-	"roomsDoorRightDisabled_comment": "POINT ARRAY: These rooms will not have a room to the right room",
+	"roomsDoorRightDisabled_comment": "POINT ARRAY: Optional, these rooms will not have a room to the right room",
 	"roomsDoorRightDisabled": ["7,3","7,5","7,7"]
 }
