--- a/config.json
+++ b/config.json
@@ -18,19 +18,19 @@
 	"randomEnabled_comment": "BOOLEAN: (DEBUG ONLY) When random is disabled, mean values are used instead",
 	"randomEnabled": true,
 	"randomSeed_comment": "INTEGER: Global random seed",
-	"randomSeed": 5154,
+	"randomSeed": 555223,
 	"mapName_comment": "STRING: The name of the map",
-	"mapName": "new_gen_test",
+	"mapName": "virtual_reality_3",
 	"roomsCount_comment": "POINT: Total count of rooms generated horizontally and vertically",
-	"roomsCount": "7,7",
+	"roomsCount": "7,9",
 	"roomMinMaxSize_comment": "MINMAXSIZE: Min and max base randomized horizontal/vertical size in tiles of the generated rooms of the map's carcass",
-	"roomMinMaxSize": "6,7,8,9",
+	"roomMinMaxSize": "6,6,8,8",
 	"wallMinMaxSize_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical walls of the rooms in tiles",
-	"wallMinMaxSize": "1,2,3,4",
+	"wallMinMaxSize": "1,1,3,3",
 	"wallMaxOffset_comment": "POINT: How much horizontal/vertical walls can be offset towards the center of the room from their base position",
-	"wallMaxOffset": "2,3",
+	"wallMaxOffset": "1,1",
 	"doorMinMaxWidth_comment": "MINMAXSIZE: Min and max randomized width of the horizontal/vertical doors of the rooms",
-	"doorMinMaxWidth": "2,3,4,5",
+	"doorMinMaxWidth": "3,3,5,5",
 	"styleCount_comment": ["INTEGER: Total count of possible room styles. Not guaranteed that all styles will be used.",
 		"Please note that by default each consecutive style has a +1 height for shadow generation."],
 	"styleCount": 3,
@@ -39,53 +39,53 @@
 	"styleSizeMinMaxSize_comment": "MINMAXSIZE: Min and max size of the randomized style of the room compared to the base size of the room",
 	"styleSizeMinMaxSize": "0,0,2,2",
 	"ambientLightColor_comment": "COLOR: Ambient light color",
-	"ambientLightColor": "200,150,225,225",
+	"ambientLightColor": "225,160,160,225",
 	"shadowTintFloor_comment": "COLOR: Shadow tint floor color",
 	"shadowTintFloor": "255,255,255,40",
 	"shadowTintWall_comment": "COLOR: Shadow tint wall color",
 	"shadowTintWall": "255,255,255,25",
 	"blackLineFloorTint_comment": "COLOR: Black line floor color",
-	"blackLineFloorTint": "255,255,255,20",
+	"blackLineFloorTint": "255,255,255,25",
 	"blackLineWallTint_comment": "COLOR: Black line wall color",
-	"blackLineWallTint": "255,255,255,20",
+	"blackLineWallTint": "255,255,255,25",
 	"floorMinMaxTintBase_comment": "MINMAXCOLOR: Base randomized min max floor texture tint",
-	"floorMinMaxTintBase": "110,110,110,255,110,110,110,255",
+	"floorMinMaxTintBase": "90,90,90,255,90,90,90,255",
 	"wallMinMaxTintBase_comment": "MINMAXCOLOR: Base randomized min max wall texture tint",
-	"wallMinMaxTintBase": "200,200,200,255,200,200,200,255",
+	"wallMinMaxTintBase": "180,180,180,255,180,180,180,255",
 	"floorTintPerHeight_comment": "COLOR: Floor texture tint change per style height",
-	"floorTintPerHeight": "15,15,15,0",
+	"floorTintPerHeight": "20,20,20,0",
 	"wallTintPerHeight_comment": "COLOR: Wall texture tint change per style height",
-	"wallTintPerHeight": "15,15,15,0",
+	"wallTintPerHeight": "20,20,20,0",
 	"wallHeight_comment": "INTEGER: (DEBUG) Wall height (for shadow generation purposes)",
-	"wallHeight": 3,
+	"wallHeight": 4,
 	"patternResourceCount_comment": "INTEGER: How many pattern resources are available",
 	"patternResourceCount": 11,
 	"patternMinMaxTintFloor_comment": "MINMAXCOLOR: Min max randomized floor pattern tint",
-	"patternMinMaxTintFloor": "255,255,255,15,255,255,255,25",
+	"patternMinMaxTintFloor": "255,255,255,20,255,255,255,25",
 	"patternMinMaxTintWall_comment": "MINMAXCOLOR: Min max randomized wall pattern tint",
-	"patternMinMaxTintWall": "255,255,255,15,255,255,255,25",
+	"patternMinMaxTintWall": "255,255,255,20,255,255,255,25",
 	"roomLightMinMaxTint_comment": "COLOR: Min max randomized room light effect tint values",
-	"roomLightMinMaxTint": "20,20,20,20,200,200,200,40",
+	"roomLightMinMaxTint": "20,20,20,20,220,220,220,40",
 	"roomLightMinMaxVibration_comment": "MINMAXFLOAT: Min max randomized room point light positional vibration",
-	"roomLightMinMaxVibration": "1.0,1.1",
+	"roomLightMinMaxVibration": "1.0,1.5",
 	"roomLightMinMaxRadius_comment": "MINMAXFLOAT: Min max randomized room point light radius",
-	"roomLightMinMaxRadius": "250,500",
+	"roomLightMinMaxRadius": "450,700",
 	"roomEffectMinMaxSizeMultiplier_comment": "MINMAXFLOAT: Randomized room lighting effect size multiplier",
 	"roomEffectMinMaxSizeMultiplier": "0.9,1.3",
 	"crateBlockingChance_comment": "INTEGER: Chance that a spawned crate will be blocking",
-	"crateBlockingChance": 30,
+	"crateBlockingChance": 50,
 	"cratesMinMaxSpaceLeftPerRoom_comment": "MINMAXSIZE: Each crate takes up 1x1 space until this much space is left in a room",
-	"cratesMinMaxSpaceLeftPerRoom": "1,1,3,3",
+	"cratesMinMaxSpaceLeftPerRoom": "0,0,1,1",
 	"crateBlockingMinMaxTint_comment": "MINMAXCOLOR: Randomized blocking crate tint",
-	"crateBlockingMinMaxTint": "210,210,210,210,230,230,230,220",
+	"crateBlockingMinMaxTint": "225,210,210,220,250,240,240,230",
 	"crateNonBlockingMinMaxTint_comment": "MINMAXCOLOR: Randomized non blocking crate tint",
-	"crateNonBlockingMinMaxTint": "130,130,130,210,150,150,150,220",
+	"crateNonBlockingMinMaxTint": "90,90,90,210,110,110,110,215",
 	"crateMinMaxSizeMultiplier_comment": "MINMAXFLOAT: Randomized crate size multiplier",
-	"crateMinMaxSizeMultiplier": "0.9,1.3",
+	"crateMinMaxSizeMultiplier": "0.7,1.5",
 	"cratesBlockingPerStyle_comment": "INTEGER: Amount of blocking crate styles per room style",
-	"cratesBlockingPerStyle": 3,
+	"cratesBlockingPerStyle": 6,
 	"cratesNonBlockingPerStyle_comment": "INTEGER: Amount of non blocking crate styles per room style",
-	"cratesNonBlockingPerStyle": 3,
+	"cratesNonBlockingPerStyle": 6,
 	"outputTextFilePath_comment": "STRING: Path to the text file into which basic output is printed",
 	"outputTextFilePath": "out.txt",
 	"gameVersion_comment": "STRING: Game version, change if necessary",
@@ -93,9 +93,20 @@
 	"cropMap_comment": "BOOLEAN: (DEBUG ONLY) Crop the unnecessary tiles of the map during generation",
 	"cropMap": true,
 	"roomsDisabled_comment": "POINT ARRAY: Optional, these rooms will be removed",
-	"roomsDisabled": ["0,0","0,5","3,2","3,4","0,1","0,4","0,5","0,6","1,0","1,6"],
-	"roomsDoorDownDisabled_comment": "POINT ARRAY: Optional, these rooms will not have a room to the lower room",
-	"roomsDoorDownDisabled": ["6,4","7,5"],
-	"roomsDoorRightDisabled_comment": "POINT ARRAY: Optional, these rooms will not have a room to the right room",
-	"roomsDoorRightDisabled": ["7,3","7,5","7,7"]
+	"roomsDisabled": [
+	  "3,4","3,5",
+	  "4,4","4,5",
+	"1,1","2,1","3,1","4,1","5,1","6,1",
+	"1,8","2,8","3,8","4,8","5,8","6,8"
+	],
+	"roomsDoorDownDisabled_comment": "POINT ARRAY: Optional, these rooms will not have a door to the lower room",
+	"roomsDoorDownDisabled": [
+		"1,1","6,1",
+		"1,7","6,7"
+	],
+	"roomsDoorRightDisabled_comment": "POINT ARRAY: Optional, these rooms will not have a door to the right room",
+	"roomsDoorRightDisabled": [
+		"2,1","4,1",
+		"2,8","4,8"
+	]
 }
